fix: firm up pooverHelper, temp alignment for demo of anchor to ux

--- a/src/components/reusable/modal/modal.scss
+++ b/src/components/reusable/modal/modal.scss
@@ -188,6 +188,10 @@ slot[name='footer']::slotted(*) {
   padding: 4px 16px 4px 4px;
   min-height: 0;
 
+  &.popover-extended {
+    padding: 4px 8px 4px 4px;
+  }
+
   &:not(.disableScroll) {
     overflow-y: auto;
     overscroll-behavior: contain;
