--- a/src/components/reusable/popover/popover.scss
+++ b/src/components/reusable/popover/popover.scss
@@ -201,19 +201,3 @@ dialog.popover-extended-true {
     display: none;
   }
 }
-
-.cube-icon {
-  width: 67px;
-  height: 67px;
-  display: inline-flex;
-
-  svg {
-    width: 100%;
-    height: 100%;
-  }
-
-  path {
-    transform-origin: center;
-    transform: scale(1.5);
-  }
-}
